@@ -1,6 +1,6 @@
-February 8, 2000
+February 11, 2000
 
-This is V2.1.5 of SExtractor.
+This is V2.1.6 of SExtractor.
 SExtractor stands for ``Source Extractor'': a software for making
 catalog of sources from astronomical images.
 
